--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-This is for the advanced web design and development class.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Design Class</title>
+</head>
+<body>
+    <h1>CTK 303 - Advance Web Design and Development Class</h1>
+    <p>Emmet</p>
+</body>
+</html>
