--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -166,7 +166,7 @@
         </div>
     </section>
 
-    <footer>Klass <i class="fa fa-heart"></i></footer>
+    <footer>Klassic <i class="fa fa-heart"></i></footer>
 </body>
 
 </html>
