--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -53,7 +53,7 @@
         <img class="offers-img" src="assets/illustration.svg" alt="">
         <div class="offers-contents">
             <h2>Our Offers</h2>
-            <p>At Kass, we take pride in offering a wide range of exceptional products and services that cater to your
+            <p>At Klassic, we take pride in offering a wide range of exceptional products and services that cater to your
                 furnishing needs. Our commitment to quality, affordability, and customer satisfaction sets us apart. We
                 offer the following:</p>
             <ul>
