--- a/Assignment6/index.html
+++ b/Assignment6/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg px-5 py-4">
         <div class="container-fluid">
             <a class="navbar-brand fs-3 logo" href="#">
-                Klassic
+                Klassic Bootstrap Version
                 <i class="fa fa-heart"></i>
             </a>
 
