--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -40,13 +40,13 @@
     <section id="search-banner">
         <div class="search-banner-texts">
             <h1>Get your quality chairs from us!</h1>
-            <form action="" class="search-box">
+            <form class="search-box">
                 <i class="fas fa-search"></i>
                 <input type="text" class="search-input" placeholder="Search..." name="search">
                 <input type="submit" class="search-btn" value="Search">
             </form>
         </div>
-        <img src="assets/f2.png" alt="furnitures" />
+        <img src="assets/f2.png" alt="furnitures">
     </section>
 
     <section id="offers">
@@ -72,7 +72,7 @@
 
         <div class="featured-wrapper">
             <div class="featured-box">
-                <img src="assets/f4.png" alt="furnitures" />
+                <img src="assets/f4.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Santorini</p>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="featured-box">
-                <img src="assets/f5.png" alt="furnitures" />
+                <img src="assets/f5.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Gotik</p>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="featured-box">
-                <img src="assets/f6.png" alt="furnitures" />
+                <img src="assets/f6.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Cacoon</p>
@@ -113,7 +113,7 @@
             </div>
 
             <div class="featured-box">
-                <img src="assets/f3.png" alt="furnitures" />
+                <img src="assets/f3.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Safari</p>
@@ -126,7 +126,7 @@
             </div>
 
             <div class="featured-box">
-                <img src="assets/f1.png" alt="furnitures" />
+                <img src="assets/f1.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Edgewood</p>
@@ -139,7 +139,7 @@
             </div>
 
             <div class="featured-box">
-                <img src="assets/f7.png" alt="furnitures" />
+                <img src="assets/f7.png" alt="furnitures">
                 <div class="featured-card">
                     <div class="featured-text">
                         <p>Tokyo</p>
